# service-kit

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  autogenerate-options-docs.sh  pyproject.toml  template_service.py  vulture_allowlist.py
docs/: README.md  make.bat
docs/source/: conf.py  configuration.rst  how_to_bootstrap_a_service.rst  how_to_set.rst  index.rst  template_service.rst
docs/source/_templates/: custom-class-template.rst  custom-function-template.rst  custom-module-template.rst
service_kit/: ServiceConfiguration.py  __init__.py  base_model.py  errors.py  feature_flag.py  types.py
service_kit/api/: __init__.py  api_utils.py  error_handling.py  request_id_middleware.py  request_log_middleware.py  responses.py  types.py
service_kit/api/testing/: __init__.py
service_kit/configuration/: __init__.py  service_configuration.py  types.py  utils.py
service_kit/logging/: __init__.py  _logger.py  error_logging.py  git.py  log_level.py  security_risk.py  startup.py
service_kit/logging/testing/: __init__.py  fixtures.py
service_kit/testing/: __init__.py  api.py
service_kit/utils/: timer.py
tests/: conftest.py  test_api.py  test_configuration.py  test_errors.py  test_feature_flag.py  test_service.py  test_timer.py
tests/configuration/: test_feature_flag.py
